Fri Jun 14 22:57:38 UTC 2013  Mike Martinez  <martinez_m@ociweb.com>

        * dds/DCPS/RTPS/RtpsDiscovery.h:
        * dds/DCPS/RTPS/RtpsDiscovery.cpp:
        * dds/DCPS/RTPS/Sedp.cpp:
        * dds/DCPS/RTPS/Spdp.cpp:

          Added DefaultMulticastGroup and TTL configuration settings.
          TTL is set on the SPDP socket.

        * dds/DCPS/transport/rtps_udp/RtpsUdpDataLink.cpp:
        * dds/DCPS/transport/rtps_udp/RtpsUdpInst.h:

          Set the TTL value for the multicast socket.

Fri Jun 14 17:51:15 UTC 2013  Paul Calabrese  <calabrese_p@ociweb.com>

        * examples/DCPS/IntroductionToOpenDDS/StockQuoter.mpc:
        * examples/DCPS/IntroductionToOpenDDS/publisher.cpp:
        * examples/DCPS/IntroductionToOpenDDS/subscriber.cpp:

          Modify this example to work with static builds.

Fri Jun  7 18:14:52 UTC 2013  Mike Martinez  <martinez_m@ociweb.com>

        * dds/DCPS/transport/tcp/TcpTransport.cpp:

          RT-16106: Moved actions to outside of lock scope to avoid a
                   deadlock.

Wed Jun  5 20:19:06 UTC 2013  Jeff Schmitz  <schmitz_j@ociweb.com>

        * MPC/config/dcps.mpb:
        * MPC/config/dcpslib.mpb:

          Bugzilla 4058: Split dcps base in half - one for internal use
          (dcpslib) and one for external (dcps).  dcpslib adds in libout.

        * contrib/wrapper/DDSWrapper_OpenDDS.mpc:
        * contrib/wrapper/example/WrapperStockQuoter.mpc:
        * dds/DCPS/InfoRepoDiscovery/InfoRepoDiscovery.mpc:
        * dds/DCPS/QOS_XML_Handler/qos_xml_handler.mpc:
        * dds/DCPS/RTPS/rtps.mpc:
        * dds/DCPS/transport/multicast/OpenDDS_Multicast.mpc:
        * dds/DCPS/transport/rtps_udp/OpenDDS_Rtps_Udp.mpc:
        * dds/DCPS/transport/shmem/OpenDDS_Shmem.mpc:
        * dds/DCPS/transport/tcp/OpenDDS_Tcp.mpc:
        * dds/DCPS/transport/udp/OpenDDS_Udp.mpc:
        * dds/InfoRepo/DCPSInfoRepo.mpc:
        * dds/monitor/monitor.mpc:
        * java/dds/dcps_java.mpc: