@@ -22,6 +22,7 @@ namespace DCPS {
 RtpsUdpInst::RtpsUdpInst(const std::string& name)
   : TransportInst("rtps_udp", name)
   , use_multicast_(true)
+  , ttl_(1)
   , multicast_group_address_(7401, "239.255.0.2")
   , nak_depth_(32) // default nak_depth in OpenDDS_Multicast
   , nak_response_delay_(0, 200*1000 /*microseconds*/) // default from RTPS
